--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@openmoviedb/kinopoiskdev_client": "^1.3.10",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -25,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!axios)/'",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
@@ -49,8 +51,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.4.0",
     "@types/node-sass": "^4.11.7",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^8.57.0",
@@ -58,9 +64,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "globals": "^15.4.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.1.4",
     "ts-loader": "^9.5.1",
     "typescript-eslint": "^7.13.0",
     "webpack": "^5.92.0",
